add_subdirectory(bin)
add_subdirectory(database)
add_subdirectory(imm)
add_subdirectory(lib)
simcenter_add_python_script(SCRIPT ComputeIntensityMeasure.py)
simcenter_add_python_script(SCRIPT CreateScenario.py)
simcenter_add_python_script(SCRIPT CreateStation.py)
simcenter_add_python_script(SCRIPT FetchOpenSHA.py)
simcenter_add_python_script(SCRIPT HazardSimulaton.py)
simcenter_add_python_script(SCRIPT SelectGroundMotion.py)

